force-app/main/default/objects/Sibling__c/Sibling__c.object-meta.xml
<CustomObject>
    <label>Sibling</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Sibling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Siblings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>