force-app/main/default/objects/Sibling__c/fields/C_Status_of_sibling_s_relationship__c.field-meta.xml
<CustomField>
    <fullName>C_Status_of_sibling_s_relationship__c</fullName>
    <label>C. Status of sibling&apos;s relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>