force-app/main/default/objects/Sibling__c/fields/Child_welfare_Services__c.field-meta.xml
<CustomField>
    <fullName>Child_welfare_Services__c</fullName>
    <label>Child welfare Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>