force-app/main/default/objects/Sibling__c/fields/CINA_TPR_respondent_Siblings__c.field-meta.xml
<CustomField>
    <fullName>CINA_TPR_respondent_Siblings__c</fullName>
    <label>CINA/TPR - respondent/Siblings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>