force-app/main/default/objects/Sibling__c/fields/CPS__c.field-meta.xml
<CustomField>
    <fullName>CPS__c</fullName>
    <label>CPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>