force-app/main/default/objects/Sibling__c/fields/D_Narrative__c.field-meta.xml
<CustomField>
    <fullName>D_Narrative__c</fullName>
    <label>D.Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>