force-app/main/default/objects/Sibling__c/fields/is_Abuse_Neglect__c.field-meta.xml
<CustomField>
    <fullName>is_Abuse_Neglect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Abuse Neglect</label>
    <type>Checkbox</type>
</CustomField>