force-app/main/default/objects/Sibling__c/fields/is_Sibling_is_in_Child_Care__c.field-meta.xml
<CustomField>
    <fullName>is_Sibling_is_in_Child_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Sibling is in Child Care</label>
    <type>Checkbox</type>
</CustomField>