force-app/main/default/objects/Sibling__c/fields/Siblings_Name__c.field-meta.xml
<CustomField>
    <fullName>Siblings_Name__c</fullName>
    <label>Siblings Name:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>